[package]
name = "cs415-project"
version = "1.0.0"
edition = "2021"

[dependencies]
# github.com/bevyengine/bevy/issues/16120
bevy = { version = "0.15.0", features = ["wayland", "dynamic_linking"] }
bevy_render = "0.15.0"
rand = "0.9.0-beta.0"
serde = "1.0.215"
toml = "0.8.19"
lazy_static = "1.5.0"

[profile.dev]
opt-level = 0
debug = "full"
strip = "none"
lto = false
panic = "unwind"
incremental = true

[profile.release]
opt-level = 3
debug = 0
strip = "debuginfo"
lto = "fat"
incremental = true

[profile.release-wasm]
inherits = "release"
opt-level = "s"